# coursework

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  example.xlsx  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: d2a3e54a402b_create_db_model.py
src/algorithm/: algorithm.py
src/backend/: config.py  exceptions.py  main.py
src/backend/api/api/: v1.py
src/backend/api/endpoints/: upload_file.py
src/backend/db/: session.py
src/backend/db/models/: base.py  investments_results.py
src/backend/db/schemas/: investments_results.py
src/backend/middlewares/: auth.py
src/backend/repositories/: base.py  investments_results.py
src/backend/services/: investments_results.py
src/backned/: config.py  exceptions.py  main.py
src/backned/api/api/: v1.py
src/backned/api/endpoints/: upload_file.py
src/backned/db/: session.py
src/backned/db/models/: investments_results.py
src/frontend/: index.html
src/frontend/css/: main.css
src/frontend/html/: index.html
src/frontend/js/: index.js
